# Product-Search-Engine

./: .dockerignore  .env.example  .gitignore  README.md  dev_settings.env  docker-compose.yml  environment.yml  experiments.md  pyproject.toml  requirements.txt  setup.sh  upload_models_to_gcs.py
.github/workflows/: deploy-embedding-service.yml
Notebooks/: Benchmarking.ipynb  Data-Curation.ipynb  Database-Ingestion.ipynb
api/: Dockerfile  main.py  requirements.txt
embedding_service/: Dockerfile  cloudbuild.yaml  main.py
notebooks/: benchmarking.ipynb  data_curation.ipynb  database_ingestion.ipynb  encoder_finetuning.ipynb
runs/: bm25_metrics.csv  hnsw_metrics.csv  hybrid_rrf_metrics.csv
runs/ablation_fair_50q/: hybrid_llm_rerank_metrics.csv  hybrid_llm_rerank_ranked.json  hybrid_rerank_metrics.csv  hybrid_rerank_ranked.json  hyde_metrics.csv  hyde_ranked.json
runs/agent_v3_balanced/: agentic_metrics.csv  agentic_ranked.json
runs/agent_v3_full200/: agentic_metrics.csv  agentic_ranked.json
runs/baseline_50q_esci/: hybrid_rerank_metrics.csv  hybrid_rerank_ranked.json
runs/comparison_balanced/: hybrid_rerank_metrics.csv  hybrid_rerank_ranked.json
runs/comparison_wands25/: agentic_metrics.csv  agentic_ranked.json  hybrid_rerank_metrics.csv  hybrid_rerank_ranked.json
runs/comparison_wands_only/: agentic_metrics.csv  agentic_ranked.json  hybrid_rerank_metrics.csv  hybrid_rerank_ranked.json
runs/full200_ablations/: hybrid_llm_rerank_metrics.csv  hybrid_llm_rerank_ranked.json  hybrid_rerank_metrics.csv  (+5 more)
src/: ingestion.py
ui/: Dockerfile  app.py
(+24 files in other folders)
