[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product_search"
version = "0.1.0"
description = "A e-commerce product search engine using OpenSearch."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Rahul Nenavath" }]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["product_search*"]